<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>icp_localization_ros2</name>
  <version>0.5.0</version>
  <description>ICP localization in a given map.</description>

  <license>BSD</license>

  <author email="jelavice@ethz.ch">Edo Jelavic</author>
  <maintainer email="jelavice@ethz.ch">Edo Jelavic</maintainer>
  
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pointmatcher_ros</depend>
  <depend>pointmatcher</depend>
  <depend>libpointmatcher</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
