<?xml version="1.0"?>
<package format="2">
  <name>linefit_ground_segmentation</name>
  <version>0.0.1</version>
  <description>linefit_ground_segmentation</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>pcl</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

