<?xml version="1.0"?>
<package format="2">
  <name>linefit_ground_segmentation_ros</name>
  <version>0.0.1</version>
  <description>linefit_ground_segmentation_ros</description>
  
  <maintainer email="lorenwel@ethz.ch">Lorenz Wellhausen</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>eigen_conversions</depend>
  <depend>rclcpp</depend>  
  <depend>tf2_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>linefit_ground_segmentation</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

